# allegroHand_v4

./: .gitignore  CMakeLists.txt  README.md
grasp/: BHandReference.h  CMakeLists.txt  RedisClient.cpp  RedisClient.h  RockScissorsPaper.cpp  RockScissorsPaper.h  handPos.cpp  handPos.h  launch_grasp.sh  main.cpp  predefinedGrasps.cpp  predefinedGrasps.h  predefinedGrasps.txt
